--- a/app/views/transaction/index.html.erb
+++ b/app/views/transaction/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Transaction#index</h1>
-<p>Find me in app/views/transaction/index.html.erb</p>
+<h1>Listing Transaction</h1>
+ 
+<table>
+  <tr>
+    <th>Type</th>
+    <th>Amount</th>
+    <th>Date</th>
+  </tr>
+ 
+  <% @transaction.each do |transaction| %>
+    <tr>
+      <td><%= transaction.type %></td>
+      <td><%= transaction.amount %></td>
+      <td><%= transaction.date %></td>
+      <td><%= link_to 'Show', transaction_index_path(transaction) %></td>
+    </tr>
+  <% end %>
+</table>
