created account models/controller and validate trans and acct

--- a/app/views/transaction/new.html.erb
+++ b/app/views/transaction/new.html.erb
@@ -1,7 +1,22 @@
 <h1>New Transaction</h1>
 
 <%= form_for :transaction, url: transaction_index_path do |f| %>
-    <p>
+ 
+  <% if @transaction.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@transaction.errors.count, "error") %> prohibited
+        this article from being saved:
+      </h2>
+      <ul>
+        <% @transaction.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+ 
+  <p>
       <%= f.label :type %><br>
       <%= f.text_field :type %>
     </p>
