--- a/app/assets/stylesheets/account_transaction.scss
+++ b/app/assets/stylesheets/account_transaction.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the Account controller here.
+// Place all the styles related to the AccountTransaction controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
